--- a/src/main/resources/view/Admin-dashboard.fxml
+++ b/src/main/resources/view/Admin-dashboard.fxml
@@ -9,7 +9,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="700" prefWidth="951.0" style="-fx-background-color: linear-gradient(to right, #1e3c72, #2a5298);" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.orm.elite_driving_school_management_system.controller.AdminDashboard">
+<AnchorPane prefHeight="700" prefWidth="951.0" style="-fx-background-color: linear-gradient(to right, #1e3c72, #2a5298);"
+            xmlns="http://javafx.com/javafx/21"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="lk.ijse.orm.elite_driving_school_management_system.controller.AdminDashboard">
+
 
 
    <VBox alignment="TOP_LEFT" layoutX="0" layoutY="0" prefHeight="700" prefWidth="290.0" spacing="20" style="-fx-padding: 20; -fx-background-color: #ffffff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
