--- a/src/main/resources/view/Login.fxml
+++ b/src/main/resources/view/Login.fxml
@@ -9,11 +9,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="468.0" prefWidth="657.0" style="-fx-background-color: #192a56;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.orm.elite_driving_school_management_system.controller.LoginController">
+<AnchorPane prefHeight="468.0" prefWidth="657.0" style="-fx-background-color: #192a56;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.orm.elite_driving_school_management_system.controller.LoginController">
    <children>
       <AnchorPane layoutX="403.0" prefHeight="468.0" prefWidth="282.0" style="-fx-background-color: #0984e3;">
          <children>
-            <ComboBox fx:id="cmbUser" layoutX="47.0" layoutY="156.0" prefWidth="180.0" promptText="Admin?Receptionist" />
+            <ComboBox fx:id="cmbUser" layoutX="47.0" layoutY="156.0" prefWidth="180.0" promptText="ADMIN/RECEPTIONIST" visibleRowCount="3" />
             <TextField fx:id="txtUserName" layoutX="47.0" layoutY="221.0" prefHeight="26.0" prefWidth="180.0" promptText="user_name" />
             <TextField fx:id="txtEmail" layoutX="47.0" layoutY="284.0" prefHeight="26.0" prefWidth="180.0" promptText="example123@gmail.com" />
             <TextField fx:id="txtPassword" layoutX="48.0" layoutY="351.0" prefHeight="26.0" prefWidth="186.0" promptText="password" />
