--- a/src/main/resources/view/Login.fxml
+++ b/src/main/resources/view/Login.fxml
@@ -16,7 +16,7 @@
             <ComboBox fx:id="cmbUser" layoutX="47.0" layoutY="156.0" prefWidth="180.0" promptText="ADMIN/RECEPTIONIST" visibleRowCount="3" />
             <TextField fx:id="txtUserName" layoutX="47.0" layoutY="221.0" prefHeight="26.0" prefWidth="180.0" promptText="user_name" />
             <TextField fx:id="txtEmail" layoutX="47.0" layoutY="284.0" prefHeight="26.0" prefWidth="180.0" promptText="example123@gmail.com" />
-            <TextField fx:id="txtPassword" layoutX="48.0" layoutY="351.0" prefHeight="26.0" prefWidth="186.0" promptText="password" />
+            <TextField fx:id="txtPasswords" layoutX="48.0" layoutY="351.0" prefHeight="26.0" prefWidth="186.0" promptText="password" />
             <Label layoutX="58.0" layoutY="51.0" text="Welcome Back" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="24.0" />
