--- a/src/main/resources/view/Student.fxml
+++ b/src/main/resources/view/Student.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -15,135 +16,89 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="697.0" prefWidth="1219.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.orm.elite_driving_school_management_system.controller.StudentController">
-    <children>
-        <VBox layoutX="-32.0" layoutY="-2.0" prefHeight="714.0" prefWidth="1389.0" spacing="15.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="-15.0" AnchorPane.leftAnchor="-12.0" AnchorPane.rightAnchor="-158.0" AnchorPane.topAnchor="-2.0">
+<AnchorPane prefHeight="600" prefWidth="950" style="-fx-background-color: #eeeee4;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.orm.elite_driving_school_management_system.controller.StudentController">
 
-            <padding>
-                <Insets bottom="10" left="10" right="10" top="10" />
-            </padding>
+    <VBox layoutX="10.0" layoutY="10.0" spacing="15" AnchorPane.bottomAnchor="10.799999999999955" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.799999999999955" AnchorPane.topAnchor="10.0">
 
-            <Label style="-fx-font-size: 24px; -fx-font-weight: bold; -fx-text-fill: black;" text="Student Management" textFill="#273c75">
-                <VBox.margin>
-                    <Insets bottom="20.0" left="190.0" right="5.0" top="10.0" />
-                </VBox.margin></Label>
+        <Label prefHeight="32.0" prefWidth="273.0" style="-fx-font-size: 22px; -fx-font-weight: bold; -fx-text-fill: #2c3e50;" text="Student Management" textFill="#060071">
+         <VBox.margin>
+            <Insets left="250.0" top="10.0" />
+         </VBox.margin></Label>
 
-            <GridPane hgap="10" minHeight="80.0" prefHeight="200.0" prefWidth="80.0" vgap="10">
+        <Separator />
+
+        <HBox fx:id="imagehbox" alignment="CENTER" prefHeight="272.0" prefWidth="930.0" spacing="20" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
+
+            <GridPane hgap="15" prefHeight="291.0" prefWidth="932.0" style="-fx-padding: 10;" vgap="15" AnchorPane.leftAnchor="0">
                 <columnConstraints>
-                    <ColumnConstraints halignment="RIGHT" minWidth="150.0" />
-                    <ColumnConstraints maxWidth="200.0" minWidth="300.0" prefWidth="200.0" />
-                    <ColumnConstraints minWidth="150.0" />
-                    <ColumnConstraints minWidth="200.0" />
-                    <ColumnConstraints minWidth="150.0" />
-                    <ColumnConstraints minWidth="200.0" />
-                    <ColumnConstraints minWidth="150.0" />
-                    <ColumnConstraints minWidth="150.0" />
+                    <ColumnConstraints percentWidth="30" />
+                    <ColumnConstraints percentWidth="70" />
                 </columnConstraints>
-
                 <rowConstraints>
-                    <RowConstraints /><RowConstraints /><RowConstraints /><RowConstraints />
-                    <RowConstraints /><RowConstraints /><RowConstraints /><RowConstraints />
-                    <RowConstraints /><RowConstraints /><RowConstraints /><RowConstraints />
-                    <RowConstraints /><RowConstraints />
                     <RowConstraints />
                     <RowConstraints />
                     <RowConstraints />
                     <RowConstraints />
                     <RowConstraints />
-                    <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
-                    <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
                     <RowConstraints />
-                    <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
-                    <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
+                    <RowConstraints />
                 </rowConstraints>
 
-                <VBox.margin>
-                    <Insets bottom="5.0" />
-                </VBox.margin>
+                <Label text="Student ID:" GridPane.columnIndex="0" GridPane.rowIndex="0">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <TextField fx:id="txtStudentId" editable="false" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-                <children>
-                    <Label prefHeight="17.0" prefWidth="101.0" style="-fx-font-weight: bold;" text="Student ID:" textFill="black" GridPane.rowIndex="3" />
-                    <Label fx:id="lblStudentID" style="-fx-font-weight: bold;" text="1" textFill="black" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <Label style="-fx-font-weight: bold;" text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <TextField fx:id="txtName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-                    <Label prefHeight="17.0" prefWidth="101.0" style="-fx-font-weight: bold;" text="First Name : " textFill="black" GridPane.rowIndex="4" />
-                    <TextField fx:id="txtFirstName" promptText="Saumya" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                <Label style="-fx-font-weight: bold;" text="Email:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-                    <Label prefHeight="17.0" prefWidth="101.0" style="-fx-font-weight: bold;" text="Address :" textFill="black" GridPane.rowIndex="5" />
-                    <TextField fx:id="txtAddress" promptText="Colombo, 07" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                    <Label text="Course ID :" GridPane.columnIndex="2" GridPane.rowIndex="3">
-                        <font>
-                            <Font name="System Bold" size="12.0" />
-                        </font>
-                    </Label>
-                    <Label fx:id="lblCourseID" text="1" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-                    <Label style="-fx-font-weight: bold;" text="Last Name :" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-                    <Label style="-fx-font-weight: bold;" text=" " GridPane.columnIndex="2" GridPane.rowIndex="5" />
-                    <Label layoutX="59.0" layoutY="78.0" prefHeight="17.0" prefWidth="101.0" style="-fx-font-weight: bold;" text="Email :" textFill="black" GridPane.rowIndex="6" />
-                    <TextField fx:id="txtEmail" promptText="example123@gmail.com" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                    <Label style="-fx-font-weight: bold;" text="Phone :" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-                    <Label text="Age :" GridPane.columnIndex="2" GridPane.rowIndex="6">
-                        <font>
-                            <Font name="System Bold" size="12.0" />
-                        </font>
-                    </Label>
-                    <Label layoutX="59.0" layoutY="114.0" prefHeight="18.0" prefWidth="109.0" style="-fx-font-weight: bold;" text="Registration Date :" textFill="black" GridPane.rowIndex="7" />
-                    <Label text="Lesson ID :" GridPane.columnIndex="4" GridPane.rowIndex="3">
-                        <font>
-                            <Font name="System Bold" size="12.0" />
-                        </font>
-                    </Label>
-                    <Label fx:id="lblLessonID" text="1" GridPane.columnIndex="5" GridPane.rowIndex="3" />
-                    <Label style="-fx-font-weight: bold;" text="Payment ID :" GridPane.columnIndex="6" GridPane.rowIndex="3" />
-                    <Label fx:id="lblPaymentID" text="1" GridPane.columnIndex="7" GridPane.rowIndex="3" />
-                    <TextField fx:id="txtLastName" promptText="Divyanjalee" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-                    <TextField fx:id="txtPhone" promptText="0777777777" GridPane.columnIndex="3" GridPane.rowIndex="5" />
-                    <TextField fx:id="txtAge" promptText="24" GridPane.columnIndex="3" GridPane.rowIndex="6" />
-                    <DatePicker fx:id="registrationDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-               <Label text="NIC :" GridPane.columnIndex="4" GridPane.rowIndex="4">
-                  <font>
-                     <Font name="System Bold" size="12.0" />
-                  </font>
-               </Label>
-               <TextField fx:id="txtNic" prefHeight="26.0" prefWidth="93.0" promptText="2001459782V" GridPane.columnIndex="5" GridPane.rowIndex="4" />
-                </children>
+                <Label style="-fx-font-weight: bold;" text="Phone:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                <TextField fx:id="txtPhone" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+
+                <Label style="-fx-font-weight: bold;" text="Address:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                <TextField fx:id="txtAddress" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+
+                <Label style="-fx-font-weight: bold;" text="Registration Date:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+                <DatePicker fx:id="dateRegistration" prefHeight="26.0" prefWidth="217.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                <Label style="-fx-font-weight: bold;" text="Register Fee:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+                <TextField fx:id="txtRegisterFee" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+
             </GridPane>
 
-            <HBox alignment="CENTER" prefHeight="21.0" prefWidth="1228.0" spacing="10">
-                <Button fx:id="btnSave" onAction="#saveOnAction" prefHeight="32.0" prefWidth="150.0" style="-fx-background-color: #2ecc71; -fx-text-fill: white; -fx-font-weight: bold;" text="Save">
-                    <font>
-                        <Font size="15.0" />
-                    </font></Button>
-                <Button fx:id="btnUpdate" onAction="#updateOnAction" prefHeight="32.0" prefWidth="150.0" style="-fx-background-color: #3498db; -fx-text-fill: white; -fx-font-weight: bold;" text="Update">
-                    <font>
-                        <Font size="15.0" />
-                    </font></Button>
-                <Button fx:id="btnDelete" onAction="#deleteOnAction" prefHeight="32.0" prefWidth="150.0" style="-fx-background-color: #e74c3c; -fx-text-fill: white; -fx-font-weight: bold;" text="Delete">
-                    <font>
-                        <Font size="15.0" />
-                    </font></Button>
-                <Button fx:id="btnReset" onAction="#resetOnAction" prefHeight="32.0" prefWidth="150.0" style="-fx-background-color: #8e44ad; -fx-text-fill: white; -fx-font-weight: bold;" text="Reset">
-                    <font>
-                        <Font size="15.0" />
-                    </font></Button>
-            </HBox>
+        </HBox>
 
-            <TableView fx:id="tblStudent" onMouseClicked="#onClickTable" prefHeight="342.0" prefWidth="1322.0" style="-fx-border-color: lightgray;">
-                <columns>
-                    <TableColumn fx:id="colStudentID" prefWidth="71.20001363754272" text="Student ID" />
-                    <TableColumn fx:id="colFirstName" prefWidth="167.19998168945312" text="First Name" />
-                    <TableColumn fx:id="colLastName" prefWidth="176.0" text="Last Name" />
-                    <TableColumn fx:id="colAddress" prefWidth="182.4000244140625" text="Address" />
-                    <TableColumn fx:id="colEmail" prefWidth="132.79998779296875" text="Email" />
-                    <TableColumn fx:id="colPhone" minWidth="1.59991455078125" prefWidth="151.20001220703125" text="Phone" />
-                    <TableColumn fx:id="colAge" minWidth="0.0" prefWidth="81.5999755859375" text="Age" />
-                    <TableColumn fx:id="colregDate" prefWidth="127.20013427734375" text="Registration Date" />
-               <TableColumn fx:id="colNic" prefWidth="111.199951171875" text="NIC" />
-                </columns>
 
-                <VBox.margin>
-                    <Insets left="35.0" />
-                </VBox.margin>
-            </TableView>
-        </VBox>
-    </children>
+        <HBox alignment="CENTER_LEFT" spacing="15">
+            <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="125.0" style="-fx-background-color: #27ae60; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8;" text="Save" />
+            <Button fx:id="btnReset" onAction="#resetOnAction" prefWidth="125.0" style="-fx-background-color: #787A7D; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8;" text="Reset" />
+            <Button fx:id="btnUpdate" layoutX="10.0" layoutY="10.0" onAction="#updateOnAction" prefWidth="125.0" style="-fx-background-color: #536C95; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8;" text="Update" />
+            <Button fx:id="btnDelete" layoutX="68.0" layoutY="10.0" onAction="#deleteOnAction" prefWidth="125.0" style="-fx-background-color: #e74c3c; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8;" text="Delete" />
+         <VBox.margin>
+            <Insets left="200.0" />
+         </VBox.margin>
+        </HBox>
+
+        <TableView fx:id="tblStudents" onMouseClicked="#clickOnAction" prefHeight="246.0" prefWidth="930.0" style="-fx-background-color: white; -fx-border-color: lightgray; -fx-border-radius: 8;" VBox.vgrow="ALWAYS">
+            <columns>
+                <TableColumn fx:id="colId" prefWidth="120" text="Student ID" />
+                <TableColumn fx:id="colName" prefWidth="160" text="Name" />
+                <TableColumn fx:id="colEmail" prefWidth="180" text="Email" />
+                <TableColumn fx:id="colPhone" prefWidth="120" text="Phone" />
+                <TableColumn fx:id="colAddress" prefWidth="160" text="Address" />
+                <TableColumn fx:id="colregisterfee" prefWidth="160" text="RegisterFee" />
+                <TableColumn fx:id="colDate" prefWidth="140" text="Registration Date" />
+            </columns>
+            <columnResizePolicy>
+                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+            </columnResizePolicy>
+         <VBox.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" />
+         </VBox.margin>
+        </TableView>
+
+    </VBox>
 </AnchorPane>
