--- a/src/main/resources/view/Payment.fxml
+++ b/src/main/resources/view/Payment.fxml
@@ -2,13 +2,12 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -72,7 +71,6 @@
          
                 <children>
                     <Label prefHeight="17.0" prefWidth="101.0" style="-fx-font-weight: bold;" text="Payment ID :" textFill="black" GridPane.rowIndex="3" />
-                    <Label fx:id="lblPaymentID" style="-fx-font-weight: bold;" text="1" textFill="black" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          
                     <Label prefHeight="17.0" prefWidth="101.0" style="-fx-font-weight: bold;" text="Amount :" textFill="black" GridPane.rowIndex="4" />
                     <TextField fx:id="txtAmount" promptText="50000.00" GridPane.columnIndex="1" GridPane.rowIndex="4" />
@@ -84,10 +82,8 @@
                             <Font name="System Bold" size="12.0" />
                         </font>
                     </Label>
-                    <Label fx:id="lblUserId" text="1" GridPane.columnIndex="3" GridPane.rowIndex="3" />
                     <Label style="-fx-font-weight: bold;" text="Student ID : " GridPane.columnIndex="2" GridPane.rowIndex="4" />
                     <Label style="-fx-font-weight: bold;" text=" " GridPane.columnIndex="2" GridPane.rowIndex="5" />
-                    <Label fx:id="lblStudentID" text="1" GridPane.columnIndex="3" GridPane.rowIndex="4" />
                     <Label layoutX="59.0" layoutY="78.0" prefHeight="17.0" prefWidth="101.0" style="-fx-font-weight: bold;" text="Time :" textFill="black" GridPane.rowIndex="6" />
                     <TextField fx:id="txtTime" promptText="10.30a.m" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                     <Label style="-fx-font-weight: bold;" text="Course ID : " GridPane.columnIndex="2" GridPane.rowIndex="5" />
@@ -96,13 +92,16 @@
                             <Font name="System Bold" size="12.0" />
                         </font>
                     </Label>
-                    <Label fx:id="lblcourseID" text="1" GridPane.columnIndex="3" GridPane.rowIndex="5" />
                     <DatePicker fx:id="datepicker" prefHeight="26.0" prefWidth="217.0" GridPane.columnIndex="3" GridPane.rowIndex="6" />
                <Label GridPane.columnIndex="4" GridPane.rowIndex="3">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font>
                </Label>
+               <TextField fx:id="txtPaymentId" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+               <ComboBox fx:id="cmbUserId" prefWidth="150.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+               <ComboBox fx:id="cmbStudentId" prefWidth="150.0" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+               <ComboBox fx:id="cmbCourseId" prefWidth="150.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
                 </children>
             </GridPane>
 
@@ -123,15 +122,6 @@
                     <font>
                         <Font size="15.0" />
                     </font></Button>
-                <Button fx:id="btnMail" mnemonicParsing="false" onAction="#mailOnAction" prefHeight="48.0" prefWidth="71.0" style="-fx-background-color: #ffffff;">
-                    <graphic>
-                        <ImageView fitHeight="34.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../image/icons8-email-50.png" />
-                            </image>
-                        </ImageView>
-                    </graphic>
-                </Button>
             </HBox>
 
             <TableView fx:id="tblPayment" onMouseClicked="#onClickTable" prefHeight="339.0" prefWidth="1350.0" style="-fx-border-color: lightgray;">
