--- a/src/main/resources/view/Course.fxml
+++ b/src/main/resources/view/Course.fxml
@@ -14,121 +14,112 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="697.0" prefWidth="1246.0" xmlns="http://javafx.com/javafx/24.0.1"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="lk.ijse.orm.elite_driving_school_management_system.controller.CourseController">
-    <VBox layoutX="-32.0" layoutY="-2.0" prefHeight="714.0" prefWidth="1290.0" spacing="15.0"
-          style="-fx-background-color: white;" AnchorPane.bottomAnchor="-15.0" AnchorPane.leftAnchor="-12.0"
-          AnchorPane.rightAnchor="-45.0" AnchorPane.topAnchor="-2.0">
+<AnchorPane prefHeight="697.0" prefWidth="1246.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.orm.elite_driving_school_management_system.controller.CourseController">
+    <VBox layoutX="-32.0" layoutY="-2.0" prefHeight="714.0" prefWidth="1290.0" spacing="15.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="-15.0" AnchorPane.leftAnchor="-12.0" AnchorPane.rightAnchor="-45.0" AnchorPane.topAnchor="-2.0">
 
         <padding>
-            <Insets bottom="10" left="10" right="10" top="10"/>
+            <Insets bottom="10" left="10" right="10" top="10" />
         </padding>
 
-        <Label style="-fx-font-size: 24px; -fx-font-weight: bold; -fx-text-fill: black;" text="Course Management"
-               textFill="#273c75">
+        <Label style="-fx-font-size: 24px; -fx-font-weight: bold; -fx-text-fill: black;" text="Course Management" textFill="#273c75">
             <VBox.margin>
-                <Insets bottom="20.0" left="190.0" right="5.0" top="10.0"/>
+                <Insets bottom="20.0" left="190.0" right="5.0" top="10.0" />
             </VBox.margin>
         </Label>
 
         <GridPane hgap="10" minHeight="80.0" prefHeight="200.0" prefWidth="80.0" vgap="10">
             <columnConstraints>
-                <ColumnConstraints halignment="RIGHT" minWidth="150.0"/>
-                <ColumnConstraints maxWidth="200.0" minWidth="300.0" prefWidth="200.0"/>
-                <ColumnConstraints minWidth="150.0"/>
-                <ColumnConstraints minWidth="150.0"/>
+                <ColumnConstraints halignment="RIGHT" minWidth="150.0" />
+                <ColumnConstraints maxWidth="200.0" minWidth="300.0" prefWidth="200.0" />
+                <ColumnConstraints minWidth="150.0" />
+                <ColumnConstraints minWidth="150.0" />
             </columnConstraints>
 
             <rowConstraints>
-                <RowConstraints/>
-                <RowConstraints/>
-                <RowConstraints/>
-                <RowConstraints/>
-                <RowConstraints/>
-                <RowConstraints/>
-                <RowConstraints/>
-                <RowConstraints/>
-                <RowConstraints/>
-                <RowConstraints/>
-                <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0"/>
-                <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0"/>
-                <RowConstraints/>
-                <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0"/>
-                <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0"/>
+                <RowConstraints />
+                <RowConstraints />
+                <RowConstraints />
+                <RowConstraints />
+                <RowConstraints />
+                <RowConstraints />
+                <RowConstraints />
+                <RowConstraints />
+                <RowConstraints />
+                <RowConstraints />
+                <RowConstraints />
+                <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
+                <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
+                <RowConstraints />
+                <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
+            <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
             </rowConstraints>
 
             <VBox.margin>
-                <Insets bottom="5.0"/>
+                <Insets bottom="5.0" />
             </VBox.margin>
 
-            <Label prefHeight="17.0" prefWidth="101.0" style="-fx-font-weight: bold;" text="Course ID :"
-                   textFill="black" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-            <Label fx:id="lblCourseID" style="-fx-font-weight: bold;" text="1" textFill="black"
-                   GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+            <Label prefHeight="17.0" prefWidth="101.0" style="-fx-font-weight: bold;" text="Course ID :" textFill="black" GridPane.columnIndex="0" GridPane.rowIndex="0" />
 
-            <Label prefHeight="17.0" prefWidth="101.0" style="-fx-font-weight: bold;" text="Course Name :"
-                   textFill="black" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
-            <TextField fx:id="txtCourseName" promptText="Bus Driving" GridPane.columnIndex="1"
-                       GridPane.rowIndex="1"/>
+            <Label prefHeight="17.0" prefWidth="101.0" style="-fx-font-weight: bold;" text="Course Name :" textFill="black" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+            <TextField fx:id="txtCourseName" promptText="Bus Driving" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-            <Label prefHeight="17.0" prefWidth="101.0" style="-fx-font-weight: bold;" text="Time Period :"
-                   textFill="black" GridPane.rowIndex="2"/>
-            <TextField fx:id="txtTimePeriod" promptText="3 weeks" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+            <Label prefHeight="17.0" prefWidth="101.0" style="-fx-font-weight: bold;" text="Time Period :" textFill="black" GridPane.rowIndex="2" />
+            <TextField fx:id="txtTimePeriod" promptText="3 weeks" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Label text="Lesson ID :" GridPane.columnIndex="2">
                 <font>
-                    <Font name="System Bold" size="12.0"/>
+                    <Font name="System Bold" size="12.0" />
                 </font>
             </Label>
-            <Label fx:id="lblLessonID" text="1" GridPane.columnIndex="3"/>
-            <Label style="-fx-font-weight: bold;" text="Instructor ID :" GridPane.columnIndex="2"
-                   GridPane.rowIndex="1"/>
-            <Label style="-fx-font-weight: bold;" text="Student ID : " GridPane.columnIndex="2"
-                   GridPane.rowIndex="2"/>
-            <Label fx:id="lblInstructorID" text="1" GridPane.columnIndex="3" GridPane.rowIndex="1"/>
-            <Label fx:id="lblStudentID" text="1" GridPane.columnIndex="3" GridPane.rowIndex="2"/>
+            <Label style="-fx-font-weight: bold;" text="Instructor ID :" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Label style="-fx-font-weight: bold;" text="Student ID : " GridPane.columnIndex="2" GridPane.rowIndex="2" />
+         <TextField fx:id="txtCourseId" GridPane.columnIndex="1" />
+         <TextField fx:id="txtLessonId" GridPane.columnIndex="3" />
+         <TextField fx:id="txtInstructorId" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+         <TextField fx:id="txtStudentId" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+         <Label prefHeight="17.0" prefWidth="101.0" style="-fx-font-weight: bold;" text="Course Fee :" GridPane.rowIndex="4">
+            <GridPane.margin>
+               <Insets />
+            </GridPane.margin>
+         </Label>
+         <TextField fx:id="txtCourseFee" GridPane.columnIndex="1" GridPane.rowIndex="4" />
         </GridPane>
 
         <HBox alignment="CENTER" prefHeight="21.0" prefWidth="1228.0" spacing="10">
-            <Button fx:id="btnSave" onAction="#saveOnAction" prefHeight="32.0" prefWidth="150.0"
-                    style="-fx-background-color: #2ecc71; -fx-text-fill: white; -fx-font-weight: bold;" text="Save">
+            <Button fx:id="btnSave" onAction="#saveOnAction" prefHeight="32.0" prefWidth="150.0" style="-fx-background-color: #2ecc71; -fx-text-fill: white; -fx-font-weight: bold;" text="Save">
                 <font>
-                    <Font size="15.0"/>
+                    <Font size="15.0" />
                 </font>
             </Button>
-            <Button fx:id="btnUpdate" onAction="#updateOnAction" prefHeight="32.0" prefWidth="150.0"
-                    style="-fx-background-color: #3498db; -fx-text-fill: white; -fx-font-weight: bold;" text="Update">
+            <Button fx:id="btnUpdate" onAction="#updateOnAction" prefHeight="32.0" prefWidth="150.0" style="-fx-background-color: #3498db; -fx-text-fill: white; -fx-font-weight: bold;" text="Update">
                 <font>
-                    <Font size="15.0"/>
+                    <Font size="15.0" />
                 </font>
             </Button>
-            <Button fx:id="btnDelete" onAction="#deleteOnAction" prefHeight="32.0" prefWidth="150.0"
-                    style="-fx-background-color: #e74c3c; -fx-text-fill: white; -fx-font-weight: bold;" text="Delete">
+            <Button fx:id="btnDelete" onAction="#deleteOnAction" prefHeight="32.0" prefWidth="150.0" style="-fx-background-color: #e74c3c; -fx-text-fill: white; -fx-font-weight: bold;" text="Delete">
                 <font>
-                    <Font size="15.0"/>
+                    <Font size="15.0" />
                 </font>
             </Button>
-            <Button fx:id="btnReset" onAction="#resetOnAction" prefHeight="32.0" prefWidth="150.0"
-                    style="-fx-background-color: #8e44ad; -fx-text-fill: white; -fx-font-weight: bold;" text="Reset">
+            <Button fx:id="btnReset" onAction="#resetOnAction" prefHeight="32.0" prefWidth="150.0" style="-fx-background-color: #8e44ad; -fx-text-fill: white; -fx-font-weight: bold;" text="Reset">
                 <font>
-                    <Font size="15.0"/>
+                    <Font size="15.0" />
                 </font>
             </Button>
         </HBox>
 
-        <TableView fx:id="tblCourse" onMouseClicked="#onClickTable" prefHeight="347.0" prefWidth="1198.0"
-                   style="-fx-border-color: lightgray;">
+        <TableView fx:id="tblCourse" onMouseClicked="#onClickTable" prefHeight="347.0" prefWidth="1298.0" style="-fx-border-color: lightgray;">
             <columns>
-                <TableColumn fx:id="colCourseID" prefWidth="134.39998698234558" text="Course ID"/>
-                <TableColumn fx:id="colCourseName" prefWidth="508.7999725341797" text="Course Name"/>
-                <TableColumn fx:id="colTimePeriod" prefWidth="176.800048828125" text="Time Period"/>
-                <TableColumn fx:id="colLessonID" prefWidth="159.20001220703125" text="Lesson ID"/>
-                <TableColumn fx:id="colInstructorID" prefWidth="123.9998779296875" text="Instructor ID"/>
-                <TableColumn fx:id="colStudentID" prefWidth="181.60009765625" text="Student ID"/>
+                <TableColumn fx:id="colCourseID" prefWidth="117.60003423690796" text="Course ID" />
+                <TableColumn fx:id="colCourseName" prefWidth="312.00000762939453" text="Course Name" />
+                <TableColumn fx:id="colTimePeriod" prefWidth="227.19998168945312" text="Time Period" />
+                <TableColumn fx:id="colLessonID" prefWidth="140.800048828125" text="Lesson ID" />
+                <TableColumn fx:id="colInstructorID" prefWidth="93.5999755859375" text="Instructor ID" />
+            <TableColumn fx:id="colCourseFee" prefWidth="105.5999755859375" text="CourseFee" />
+                <TableColumn fx:id="colStudentID" prefWidth="373.60009765625" text="Student ID" />
             </columns>
 
             <VBox.margin>
-                <Insets left="35.0"/>
+                <Insets left="35.0" />
             </VBox.margin>
         </TableView>
     </VBox>
