--- a/src/main/resources/view/Instructor.fxml
+++ b/src/main/resources/view/Instructor.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -54,7 +55,6 @@
 
                 <children>
                     <Label prefHeight="17.0" prefWidth="101.0" style="-fx-font-weight: bold;" text="Instructor ID :" textFill="black" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                    <Label fx:id="lblinsID" style="-fx-font-weight: bold;" text="1" textFill="black" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
                     <Label prefHeight="17.0" prefWidth="101.0" style="-fx-font-weight: bold;" text="Name :" textFill="black" GridPane.columnIndex="0" GridPane.rowIndex="1" />
                     <TextField fx:id="txtName" promptText="Sunil Silva" GridPane.columnIndex="1" GridPane.rowIndex="1" />
@@ -66,14 +66,17 @@
                             <Font name="System Bold" size="12.0" />
                         </font>
                     </Label>
-                    <Label fx:id="lblLessonID" text="1" GridPane.columnIndex="3" />
                     <Label style="-fx-font-weight: bold;" text="Student ID : " GridPane.columnIndex="2" GridPane.rowIndex="1" />
                     <Label style="-fx-font-weight: bold;" text=" " GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                    <Label fx:id="lblStudentID" text="1" GridPane.columnIndex="3" GridPane.rowIndex="1" />
                <Label layoutX="59.0" layoutY="78.0" prefHeight="17.0" prefWidth="101.0" style="-fx-font-weight: bold;" text="Phone :" textFill="black" GridPane.rowIndex="3" />
                <TextField fx:id="telephone" promptText="0777777777" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                <Label style="-fx-font-weight: bold;" text="Email : " GridPane.columnIndex="2" GridPane.rowIndex="2" />
                <TextField fx:id="txtEmail" prefHeight="26.0" prefWidth="214.0" promptText="example123@gmail.com" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+               <TextField fx:id="txtintrId" GridPane.columnIndex="1" />
+               <TextField fx:id="txtLessonId" GridPane.columnIndex="3" />
+               <TextField fx:id="txtStudentId" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+               <Label style="-fx-font-weight: bold;" text="Availability " GridPane.columnIndex="2" GridPane.rowIndex="3" />
+               <ComboBox fx:id="cmbAvailability" prefWidth="150.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
                 </children>
             </GridPane>
 
@@ -100,8 +103,9 @@
                 <columns>
                     <TableColumn fx:id="colInstructorID" prefWidth="95.99999761581421" text="Instructor ID" />
                     <TableColumn fx:id="colName" prefWidth="411.1999282836914" text="Name" />
-                    <TableColumn fx:id="colAddress" prefWidth="316.8000183105469" text="Address" />
-                    <TableColumn fx:id="colphone" prefWidth="159.20001220703125" text="Phone" />
+               <TableColumn fx:id="colAvailability" prefWidth="208.80007934570312" text="Availability" />
+                    <TableColumn fx:id="colAddress" prefWidth="362.39996337890625" text="Address" />
+                    <TableColumn fx:id="colphone" prefWidth="317.60009765625" text="Phone" />
                     <TableColumn fx:id="colEmail" prefWidth="123.9998779296875" text="Email" />
                     <TableColumn fx:id="colStudentID" prefWidth="126.39990234375" text="Student ID" />
                <TableColumn fx:id="colLessonID" prefWidth="95.20002441406245" text="Lesson ID" />
