--- a/src/main/resources/view/Lesson.fxml
+++ b/src/main/resources/view/Lesson.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -55,7 +56,6 @@
 
                 <children>
                     <Label prefHeight="17.0" prefWidth="101.0" style="-fx-font-weight: bold;" text="Lesson ID :" textFill="black" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                    <Label fx:id="lbllessonID" style="-fx-font-weight: bold;" text="1" textFill="black" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
                     <Label prefHeight="17.0" prefWidth="101.0" style="-fx-font-weight: bold;" text="Name :" textFill="black" GridPane.columnIndex="0" GridPane.rowIndex="1" />
                     <TextField fx:id="txtName" promptText="Car" GridPane.columnIndex="1" GridPane.rowIndex="1" />
@@ -67,10 +67,8 @@
                             <Font name="System Bold" size="12.0" />
                         </font>
                     </Label>
-                    <Label fx:id="lblInstructorID" text="1" GridPane.columnIndex="3" />
                     <Label style="-fx-font-weight: bold;" text="Student ID : " GridPane.columnIndex="2" GridPane.rowIndex="1" />
                     <Label style="-fx-font-weight: bold;" text=" " GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                    <Label fx:id="lblStudentID" text="1" GridPane.columnIndex="3" GridPane.rowIndex="1" />
                     <Label layoutX="59.0" layoutY="78.0" prefHeight="17.0" prefWidth="101.0" style="-fx-font-weight: bold;" text="End Time :" textFill="black" GridPane.rowIndex="3" />
                     <TextField fx:id="txtendtime" promptText="10.30a.m" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                     <Label style="-fx-font-weight: bold;" text="Course ID : " GridPane.columnIndex="2" GridPane.rowIndex="2" />
@@ -79,8 +77,11 @@
                      <Font name="System Bold" size="12.0" />
                   </font>
                </Label>
-               <Label fx:id="lblcourseID" text="1" GridPane.columnIndex="3" GridPane.rowIndex="2" />
                <DatePicker fx:id="datepicker" prefHeight="26.0" prefWidth="217.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+               <TextField fx:id="txtLesson" GridPane.columnIndex="1" />
+               <ComboBox fx:id="cmbInstructor" prefWidth="150.0" GridPane.columnIndex="3" />
+               <ComboBox fx:id="cmbStudent" prefWidth="150.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+               <ComboBox fx:id="cmbCourse" prefWidth="150.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
                 </children>
             </GridPane>
 
@@ -106,13 +107,13 @@
             <TableView fx:id="tblLesson" onMouseClicked="#onClickTable" prefHeight="342.0" prefWidth="1322.0" style="-fx-border-color: lightgray;">
                 <columns>
                     <TableColumn fx:id="collessonID" prefWidth="95.99999761581421" text="Lesson ID" />
-                    <TableColumn fx:id="colName" prefWidth="411.1999282836914" text="Name" />
-                    <TableColumn fx:id="colStartTime" prefWidth="164.00003051757812" text="Start Time" />
-                    <TableColumn fx:id="colEndTime" prefWidth="199.2000732421875" text="End Time" />
-                    <TableColumn fx:id="colInstructorID" prefWidth="152.0" text="Instructor ID" />
-                    <TableColumn fx:id="colStudentID" prefWidth="160.7999267578125" text="Student ID" />
-                    <TableColumn fx:id="colCourseID" prefWidth="148.800048828125" text="Course ID" />
-               <TableColumn fx:id="colEndTime" prefWidth="199.2000732421875" text="End Time" />
+                    <TableColumn fx:id="colName" prefWidth="227.9999771118164" text="Name" />
+                    <TableColumn fx:id="colStartTime" prefWidth="134.39990234375" text="Start Time" />
+                    <TableColumn fx:id="colEndTime" prefWidth="141.60003662109375" text="End Time" />
+               <TableColumn fx:id="colDate" prefWidth="172.79998779296875" text="Date" />
+                    <TableColumn fx:id="colInstructorID" prefWidth="125.60009765625" text="Instructor ID" />
+                    <TableColumn fx:id="colStudentID" prefWidth="99.2000732421875" text="Student ID" />
+                    <TableColumn fx:id="colCourseID" prefWidth="491.199951171875" text="Course ID" />
                 </columns>
 
                 <VBox.margin>
