--- a/src/main/resources/view/Login.fxml
+++ b/src/main/resources/view/Login.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -15,8 +16,7 @@
          <children>
             <ComboBox fx:id="cmbUser" layoutX="47.0" layoutY="156.0" prefWidth="180.0" promptText="ADMIN/RECEPTIONIST" visibleRowCount="3" />
             <TextField fx:id="txtUserName" layoutX="47.0" layoutY="221.0" prefHeight="26.0" prefWidth="180.0" promptText="user_name" />
-            <TextField fx:id="txtEmail" layoutX="47.0" layoutY="284.0" prefHeight="26.0" prefWidth="180.0" promptText="example123@gmail.com" />
-            <TextField fx:id="txtPasswords" layoutX="48.0" layoutY="351.0" prefHeight="26.0" prefWidth="186.0" promptText="password" />
+            <PasswordField fx:id="txtPassword" layoutX="48.0" layoutY="351.0" prefHeight="26.0" prefWidth="186.0" promptText="password" />
             <Label layoutX="58.0" layoutY="51.0" text="Welcome Back" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="24.0" />
@@ -24,11 +24,6 @@
             </Label>
             <Label layoutX="47.0" layoutY="126.0" prefHeight="18.0" prefWidth="146.0" text="Please choose your role" textFill="WHITE" />
             <Label layoutX="47.0" layoutY="196.0" text="User Name" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="13.0" />
-               </font>
-            </Label>
-            <Label layoutX="47.0" layoutY="266.0" text="Email" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
